--- a/config.env
+++ b/config.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb://localhost:27017/ejemplo
+ATLAS_URI=mongodb+srv://ejemplotareas:T5EXD4qt1YpImr8j@cluster0.y6gbcia.mongodb.net/ejemplo?retryWrites=true&w=majority&appName=Cluster0
